# nautobot-app-livedata

./: .cookiecutter.json  .dockerignore  .gitignore  .yamllint  LICENSE  README.md  backup-database.sh  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  restore-database.sh  tasks.py
.github/: CODEOWNERS  copilote-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml  create_change_fragment.yml  upstream_testing.yml
changes/: 1.added  1.fixed  1.security  100.dependencies  108.dependencies  109.fixed  11.security  113.added  113.changed  12.changed  121.fixed  129.added  129.fixed  134.added  134.dependencies  134.fixed  14.dependencies  143.dependencies  147.dependencies  148.dependencies.md  15.dependencies  159.dependencies.md  161.dependencies.md  162.added  162.added.md  162.changed  162.changed.md  162.dependencies  162.dependencies.md  162.documentation  162.documentation.md  162.fixed  162.fixed.md  162.fixed2.md  162.housekeeping  162.housekeeping.md  168.dependencies.md  169.dependencies.md  170.dependencies.md  171.added.md  (+39 more)
development/: Dockerfile  app_config_schema.py  creds.example.env  development.env  development_mysql.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.mysql.yml  docker-compose.vscode-rdb.yml  nautobot_config.py  towncrier_template.j2
development/trusted_certs/: README.md
docs/: index.md  requirements.txt
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: index.md  version_1.0.md  version_2.4.md  version_3.0.md  version_X.Y.md
docs/dev/: arch_decision.md  contributing.md  dev_environment.md  release_checklist.md
docs/dev/code_reference/: api.md  package.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  external_interactions.md  faq.md
livedata/: __init__.py  urls.py
livedata/tests/: __init__.py  test_api.py
nautobot_app_livedata/: __init__.py  jobs.py  signals.py  template_content.py  urls.py  views.py
nautobot_app_livedata/api/: serializers.py  urls.py  utils.py  views.py
nautobot_app_livedata/jobs/: __init__.py  jobs.py
nautobot_app_livedata/templates/nautobot_app_livedata/: device_live_data.html  interface_live_data.html
nautobot_app_livedata/tests/: conftest.py  nautobot_config.py  test_api.py  test_basic.py  test_config.py  test_contenttype.py  test_jobs.py  test_output_filter.py  test_permission.py  test_primarydevice.py  test_queue_alignment_job.py  test_views.py
nautobot_app_livedata/utilities/: __init__.py  contenttype.py  customfield.py  output_filter.py  permission.py  primarydevice.py
tests/: test_output_filter.py
