[tool.poetry]
name = "nautobot_app_livedata"
version = "2.4.0b1"
description = "Nautobot App Livedata is a Nautobot app that provides a live view of the network data."
authors = ["Josef Fuchs <josef.fuchs@j-fuchs.at>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jifox/nautobot-app-livedata.git"
repository = "https://github.com/jifox/nautobot-app-livedata.git"
documentation = "https://github.com/jifox/projects/livedata/en/latest/"
keywords = ["nautobot", "nautobot-app", "nautobot-plugin"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "nautobot_app_livedata" },
]
include = [
    # Poetry by default will exclude files that are in .gitignore
    "nautobot_app_livedata/static/nautobot_app_livedata/docs/**/*",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
# Used for local development
nautobot = "^2.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
django-debug-toolbar = "~4.4.0"
invoke = "~2.2.0"
ipython = "*"
toml = "*"
Markdown = "~3.6"
# Render custom markdown for version added/changed/remove notes
markdown-version-annotations = "~1.0.1"
# Rendering docs to HTML
mkdocs = "~1.6.1"
# Material for MkDocs theme
mkdocs-material = "~9.5.35"
# Automatic documentation from sources, for MkDocs
mkdocstrings = "~0.25.2"
mkdocstrings-python = "~1.10.9"
griffe = "1.1.1"
towncrier = "~23.11.0"
to-json-schema = "*"
jsonschema = "^4.7.0"
nautobot-plugin-nornir = "~2.1.0"

[tool.poetry.group.linting.dependencies]
# Code static analysis
pylint = "~3.3.3"
# Pylint extensions for Django
pylint-django = "~2.6.1"
# Python implementation of markdownlint
pymarkdownlnt = "~0.9.26"
# Combination linter and code formatter
ruff = "~0.8.6"
# YAML linting
yamllint = "~1.35.1"


[tool.poetry.extras]
all = []

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins = "pylint_django, pylint_nautobot"
ignore = ".venv"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx = "^(_|test_|Meta$)"

[tool.pylint.messages_control]
disable = """,
    line-too-long
"""

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pylint-nautobot]
supported_nautobot_versions = [
    "2.0.0"
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F", "E", "W",  # flake8
    "S",  # bandit
    "I",  # isort
]
ignore = [
    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D203", # 1 blank line required before class docstring

    # D212 is enabled by default in google convention, and complains if we have a docstring like:
    # """
    # My docstring is on the line after the opening quotes instead of on the same line as them.
    # """
    # We've discussed and concluded that we consider this to be a valid style choice.
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line

    # Produces a lot of issues in the current codebase.
    "D401", # First line of docstring should be in imperative mood
    "D407", # Missing dashed underline after section
    "D416", # Section name ends in colon
    "E501", # Line too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"nautobot_app_livedata/migrations/*" = [
    "D",
]
"nautobot_app_livedata/tests/*" = [
    "D",
    "S"
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
package = "nautobot_app_livedata"
directory = "changes"
filename = "docs/admin/release_notes/version_X.Y.md"
template = "development/towncrier_template.j2"
start_string = "<!-- towncrier release notes start -->"
issue_format = "[#{issue}](https://github.com/jifox/nautobot-app-livedata.git/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "housekeeping"
name = "Housekeeping"
showcontent = true
