[project]
# keys listed here are mostly static; dependencies and python requirement are
# handled by Poetry and declared dynamic below.
dynamic = ["dependencies", "requires-python"]
name = "nautobot_app_livedata"
version = "3.0.0"
description = "Provides a live view of network data within Nautobot."
readme = "README.md"
authors = [{name = "Josef Fuchs", email = "josef.fuchs@j-fuchs.at"}]
license = "Apache-2.0"
keywords = ["nautobot", "nautobot-app", "nautobot-plugin"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls = { homepage = "https://github.com/jifox/nautobot-app-livedata.git", repository = "https://github.com/jifox/nautobot-app-livedata.git", documentation = "https://nautobot-app-livedata.readthedocs.io/en/latest/" }

[tool.poetry]
# metadata fields have been migrated to [project]; the remaining entries
# are purely poetry-specific configuration.
packages = [
    {include = "nautobot_app_livedata"},
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
nautobot = {version = "3.0.0", python = "3.13"}
"to-json-schema" = "~=1.0.1"
jsonschema = "^4.7.0"
"python-dotenv" = "~=1.2.1"
"nautobot-plugin-nornir" = "~=3.0.0"
h11 = ">=0.16.0,<1.0.0"
mysqlclient = "^2.2.8"

[tool.poetry.group.dev.dependencies]
"django-debug-toolbar" = "~=5.2.0"
"factory-boy" = "~=3.3.3"
faker = "^37.12.0"
invoke = "~=2.2.1"
PyYAML = "~=6.0.3"
rich = "~=14.2.0"
towncrier = "~=25.8.0"
watchdog = "~=6.0.0"
ipython = "*"
toml = "*"
Markdown = "~=3.8.2"
"python-dotenv" = "~=1.2.1"
debugpy = ">=1.8.14"

[tool.poetry.group.docs.dependencies]
mkdocs = "~=1.6.1"
"markdown-data-tables" = "~=1.0.0"
"markdown-version-annotations" = "~=1.0.1"
"mkdocs-gen-files" = "~=0.5.0"
"mkdocs-glightbox" = "~=0.5.2"
"mkdocs-include-markdown-plugin" = "~=7.2.0"
"mkdocs-macros-plugin" = "~=1.4.1"
"mkdocs-material" = "~=9.6.23"
"mkdocs-redirects" = "~=1.2.2"
"mkdocs-section-index" = "~=0.3.10"
mkdocstrings = "~=0.30.1"
"mkdocstrings-python" = "~=1.18.2"
griffe = "<2.0.0"

[tool.poetry.group.linting.dependencies]
pylint = "~=3.3.9"
"pylint-django" = "~=2.6.1"
"pymarkdownlnt" = "~=0.9.33"
ruff = "~=0.14.14"
yamllint = "~=1.37.1"
djhtml = "~=3.0.10"
djlint = "~=1.36.4"

[tool.poetry.group.testing.dependencies]
coverage = "~=7.13.4"

[tool.pylint.master]
# load-plugins = "pylint_django, pylint_nautobot"
load-plugins = "pylint_django"
py-version = "3.10"
ignore = ".venv"
ignore-paths = [
    ".*third_party.*",
    "nautobot/extras/tests/git_data/02-invalid-files/",
    "nautobot_app_livedata/tests/*"
]
jobs = 0



[tool.pylint.basic]
# No docstrings required yet for private functions, or for test_* functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"
# Don't complain about "pk" as a variable name
good-names = """_,i,j,k,pk"""

[tool.pylint.message_control]
disable = [
    "line-too-long",
]

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = ["FIXME", "XXX", "TODO"]

[tool.pylint.typecheck]
# Regex patterns describing dynamically defined attributes that cause false reports for "no-member" checker
generated-members = [
    ".*Factory\\..*",
    ".*FactoryOptions\\..*",
    ".*FilterSet\\._meta",
    ".*FilterSet\\.base_filters",
    ".*FilterSet\\.declared_filters",
    ".*Job\\.request",
    ".*LazyAttribute\\..*",  # factory attributes
    ".*Maybe\\..*",  # factory attributes
    ".*Serializer\\.Meta",
    ".*Table\\._meta",
    ".*Table\\.base_columns",
    ".*Table\\.context",
]
extension-pkg-allow-list = [
    "nh3",
]
# @patch changes the signature of a function it's applied to; don't raise "no-value-for-parameter" here
signature-mutators = ["unittest.mock.patch"]

[tool.djlint]
ignore = "H005,H006,H008,H011,H012,H013,H014,H015,H016,H019,H020,H021,H022,H023,H025,H026,H030,H031,H037"
profile = "django"
extend_exclude = "nautobot_app_livedata/static/nautobot_app_livedata/docs/"

[tool.pymarkdown]
extensions.front-matter.enabled = true  # needed for mkdocs-macros compatibility
plugins.code-block-style.enabled = false  # inconsistency between "code" blocks and "admonition" blocks is expected
plugins.line-length.enabled = false  # we don't wrap markdown to 80 characters
plugins.list-anchored-indent.enabled = true
plugins.proper-names.names = "Celery,Django,Nautobot,Nornir,Pylint,PyMarkdown,Python,REST API"
plugins.proper-names.code_blocks = false  # don't check proper nouns inside ```code blocks```
plugins.proper-names.code_spans = false  # don't check proper nouns inside `code spans`
plugins.ul-indent.enabled = false  # doesn't work well with MkDocs expectations, use list-anchored-indent instead

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "DJ",  # flake8-django
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PIE",  # flake8-pie
    "PLE",  # pylint errors
    "RUF",  # ruff itself
    "S",  # flake8-bandit
    "W",  # pycodestyle
]
ignore = [
    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D203", # 1 blank line required before class docstring

    # D212 is enabled by default in google convention, and complains if we have a docstring like:
    # """
    # My docstring is on the line after the opening quotes instead of on the same line as them.
    # """
    # We've discussed and concluded that we consider this to be a valid style choice.
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line

    # Produces a lot of issues in the current codebase.
    "D401", # First line of docstring should be in imperative mood
    "D407", # Missing dashed underline after section
    "D416", # Section name ends in colon
    "PIE808",  # unnecessary-range-start
    "RUF012",  # mutable-class-default - see https://github.com/astral-sh/ruff/issues/5243
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-local-folder = ["nautobot_app_livedata"]
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"nautobot_app_livedata/migrations/*" = [
    "D",
]
"nautobot_app_livedata/tests/*" = [
    "D",
    "S"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
package = "nautobot_app_livedata"
directory = "changes"
filename = "docs/admin/release_notes/version_X_Y.md"
template = "development/towncrier_template.j2"
start_string = "<!-- towncrier release notes start -->"
issue_format = "[#{issue}](https://github.com/jifox/nautobot-app-livedata/issues/{issue})"
environment = { DJANGO_SETTINGS_MODULE = "development.nautobot_config" }

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "housekeeping"
name = "Housekeeping"
showcontent = true

[tool.yamllint]
exclude = [
    ".git/logs/**",
    ".git/refs/**",
]
